# VRCOSCQuery

./: Cargo.toml  README.md  VRChatOSCQueryBugs.md  index.json
.github/workflows/: test.yml
src/: lib.rs  tests.rs
src/http/: host_info.rs  json_models.rs  mod.rs  node.rs
src/mdns/: mod.rs
src/tests/: example_OGB.json  mod.rs  vrc_dependent.rs
