[package]
name = "vrcoscquery-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.34.0", features = ["rt", "rt-multi-thread", "net", "sync", "time"]}
log = "0.4.20"
env_logger = "0.10.1"
test-log = "0.2.13"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"